added userstaffmixin to views and fixed font-family on card

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -682,7 +682,7 @@ ul, li {
 .category-course-link{
     font-size: 16px;
     color: #FFFFFF !important;
-    font-family: Roboto Regular;
+    font-family: Roboto;
     font-weight: normal;
 }
 
