added select field and javascript libraries quicksearch and multiselect.js to our project

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -113,6 +113,11 @@
     border: 0px;
 }
 
+.category-search-users{
+    width: 100%;
+    margin-bottom: 15px;
+}
+
 /* category app ends */
 
 .clearfix{
