--- a/categories/templates/categories/update.html
+++ b/categories/templates/categories/update.html
@@ -66,8 +66,8 @@
     });
 
     $('#id_coordinators').multiSelect({
-		   selectableHeader: "<input type='text' class='search-input' autocomplete='off' placeholder='{% trans "try an username" %} '>",
-		  selectionHeader: "<input type='text' class='search-input' autocomplete='off' placeholder='{% trans "try an username" %} '>",
+		   selectableHeader: "<input type='text' class='search-input category-search-users' autocomplete='off' placeholder='{% trans "try an username" %} '>",
+		  selectionHeader: "<input type='text' class='search-input category-search-users' autocomplete='off' placeholder='{% trans "try an username" %} '>",
 		  afterInit: function(ms){
 		    var that = this,
 		        $selectableSearch = that.$selectableUl.prev(),
