--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -59,12 +59,12 @@
 }
 
 #create-category{
-  margin-left: 40%;
+  margin-left: 20%;
   margin-bottom: 1%;
   border: none;
   background-color: #66BB6A;
   color: #FFFFFF;
-  width: 200px;
+  width: 60%;
   height: 40px;
   font-size: 15px;
 }
