--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -2,7 +2,7 @@
 /* sidebar menu */
 
 #sidebar-menu{
-  margin-left: 30%;
+    -webkit-padding-start: 0px;
 }
 #sidebar-menu .item{
     font-size: 45px;
@@ -153,6 +153,20 @@
     margin-top: -6px;
     height: 32px; 
     width: 32px;
+}
+.navbar .project_name {
+    margin-top: -5px;
+    font-weight: normal;
+    padding-left: 10px;
+    font-size: 20px;
+    color: white;
+}
+
+.navbar-nav li > a.profile {
+    padding-top: 0px !important;
+    padding-bottom:15px;
+    padding-right:0px;
+    padding-left: 0px;
 }
 
 .navbar-nav li > a {
@@ -561,6 +575,11 @@ a.alert_message:hover{color : grey}
 .accordion_list {
     padding-left: 4px;
     background: #F5F5F5;
+}
+
+.container-fluid {
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 body .container .jumbotron-inverse, body .container .well-inverse, body .container-fluid .jumbotron-inverse, body .container-fluid .well-inverse {
