fixed coordinators empty option and display on template

--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -73,12 +73,17 @@
                     <div id="{{category.slug}}" class="panel-collapse collapse category-panel-content">
                         <input type="hidden" class="log_url" value="{% url 'categories:view_log' category.id %}" />
                         <input type="hidden" class="log_id" value="" />
-
-                        <h4>  {% trans "Coordinator(s): " %}
+                        {% if coordinators %}
+                             <h4>  {% trans "Coordinator(s): " %}
                             {% for coordinator in category.coordinators.all %}
                                 {{coordinator.social_name}}
                             {% endfor %}
                         </h4>
+                        {% else %}
+                            <h4> {% trans "It doesn't possess coordinators" %} </h4>
+                        {% endif %}
+
+                       
                         {{category.description|safe}}
                         {% if user in category.coordinators.all %}
                         <button class="create-subject-btn"> {% trans "create new subject" %} </button>
