Categories creation adjust

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -126,6 +126,19 @@
     margin-bottom: 15px;
 }
 
+.ms-container {
+    width: 100% !important;
+}
+
+#coordinators_accordion .panel-heading {
+    background: #FFFFFF;
+    border: none;
+}
+
+#coordinators_accordion .panel-collapse {
+    padding: 10px;
+}
+
 /* category app ends */
 
 .clearfix{
