--- a/categories/templates/categories/create.html
+++ b/categories/templates/categories/create.html
@@ -1,116 +1,18 @@
-{% extends 'categories/home.html' %}
+{% extends 'categories/list.html' %}
 
 {% load widget_tweaks static i18n permission_tags django_bootstrap_breadcrumbs switchevenodd %}
 
 {% block breadcrumbs %}
-  {{ block.super }}
-  {% breadcrumb 'Create Category' 'categories:create' %}
+	{{ block.super }}
+	{% breadcrumb 'Create Category' 'categories:create' %}
 {% endblock %}
 
 {% block content %}
-<div class="card card-content">
-    <div class="card-body">
-		<form method="post" action="" enctype="multipart/form-data">
-			{% csrf_token %}
-			{% for field in form %}
-				<div class="form-group {% if form.has_error %} has-error {% endif %} is-fileinput">
-					{% if field.auto_id != 'id_visible' %}
-						<label for="{{ field.auto_id }}">{{ field.label }}</label>
-					{% endif %}
-					{% if field.auto_id == 'id_init_register_date' or field.auto_id == 'id_end_register_date' or field.auto_id == 'id_init_date' or field.auto_id == 'id_end_date'%}
-						<input type="text" class="form-control date-picker" name="{{field.name}}" value="{{field.value|date}}" min="{{now|date:'SHORT_DATE_FORMAT'}}">
-					{% elif field.auto_id == 'id_visible' %}
-						<div class="checkbox">
-							<label for="{{ field.auto_id }}">
-		      					{% render_field field %} {{field.label}}
-		  					</label>
-						</div>
-					{% elif field.auto_id == 'id_description' %}
-						{% render_field field class='form-control text_wysiwyg' %}
-
-						
-					{% comment %}
-						
-					{% endcomment %}
-					{% elif field.auto_id == 'id_coordinators' %}
-						<select id="{{field.auto_id}}" multiple="multiple" class="form-control"
-						style="position: absolute; left: -9999px;" name="coordinators">
-						
-							{% for value, name in form.fields.coordinators.choices %}	
-								<option value="{{value}}">{{name}}</option>
-							{% endfor %}
-						</select>
-					
-					{% else %}
-						{% render_field field class='form-control' %}
-					{% endif %}
-					<span class="help-block">{{ field.help_text }}</span>
-					{% if field.errors %}
-					<div class="row">
-					</br>
-							<div class="alert alert-danger alert-dismissible" role="alert">
-			  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-			  						<span aria-hidden="true">&times;</span>
-		  						</button>
-								<ul>
-									{% for error in field.errors %}
-										<li>{{ error }}</li>
-									{% endfor %}
-								</ul>
-							</div>
-					</div>
-					{% endif %}
-				</div>
-			{% endfor %}
-			<div class="row text-center">
-					<input type="submit" value="{% trans 'Register' %}" class="btn btn-primary btn-raised" />
-			</div>
-      	</form>
+	<div class="card card-content">
+	    <div class="card-body">
+	    	{% include 'categories/_form.html' %}
+		</div>
 	</div>
-</div>
-</br>
-</br>
-</br>
-<script type="text/javascript">
-    var locale = navigator.language || navigator.userLanguage;
-    $('.date-picker').datepicker({
-        language: locale,
-    });
-
-     $('#id_coordinators').multiSelect({
-		  selectableHeader: "<input type='text' class='search-input category-search-users' autocomplete='off' placeholder='{% trans "try an username" %} '>",
-		  selectionHeader: "<input type='text' class='search-input category-search-users' autocomplete='off' placeholder='{% trans "try an username" %} '>",
-		  afterInit: function(ms){
-		    var that = this,
-		        $selectableSearch = that.$selectableUl.prev(),
-		        $selectionSearch = that.$selectionUl.prev(),
-		        selectableSearchString = '#'+that.$container.attr('id')+' .ms-elem-selectable:not(.ms-selected)',
-		        selectionSearchString = '#'+that.$container.attr('id')+' .ms-elem-selection.ms-selected';
-
-		    that.qs1 = $selectableSearch.quicksearch(selectableSearchString)
-		    .on('keydown', function(e){
-		      if (e.which === 40){
-		        that.$selectableUl.focus();
-		        return false;
-		      }
-		    });
-
-		    that.qs2 = $selectionSearch.quicksearch(selectionSearchString)
-		    .on('keydown', function(e){
-		      if (e.which == 40){
-		        that.$selectionUl.focus();
-		        return false;
-		      }
-		    });
-		  },
-		  afterSelect: function(){
-		    this.qs1.cache();
-		    this.qs2.cache();
-		  },
-		  afterDeselect: function(){
-		    this.qs1.cache();
-		    this.qs2.cache();
-		  }
-	});// Used to create multi-select css style
-</script>
+	<br clear="all">
+	<br clear="all">
 {% endblock %}
