Updating categories breadcrumbs and other adjusts

--- a/categories/templates/categories/create.html
+++ b/categories/templates/categories/create.html
@@ -1,4 +1,4 @@
-{% extends 'categories/list.html' %}
+{% extends template_extends %}
 
 {% load widget_tweaks static i18n permission_tags django_bootstrap_breadcrumbs switchevenodd %}
 
