--- a/categories/templates/categories/update.html
+++ b/categories/templates/categories/update.html
@@ -1,4 +1,4 @@
-{% extends 'categories/list.html' %}
+{% extends template_extends %}
 
 {% load static i18n %}
 {% load widget_tweaks django_bootstrap_breadcrumbs %}
