--- a/subjects/templates/subjects/create.html
+++ b/subjects/templates/subjects/create.html
@@ -1,4 +1,4 @@
-{% extends 'categories/create.html' %}
+{% extends 'categories/home.html' %}
 
 
 
@@ -14,8 +14,92 @@
 {% endblock %}
 
 {% block content %}
-	{{ block.super }}
-	
+
+	<div class="card card-content">
+	    <div class="card-body">
+	<form method="post" action="" enctype="multipart/form-data">
+	{% csrf_token %}
+	{% for field in form %}
+	{% if field.auto_id == 'id_students' %}
+			<div class="panel-group" id="coordinators_accordion" role="tablist" aria-multiselectable="true">
+				<div class="panel panel-info">
+        			<div class="panel-heading">
+            			<div class="row">
+                			<div class="col-md-12">
+                    			<a data-parent="#coordinators_accordion" data-toggle="collapse" href="#coords">
+                    				<h4 class="panel-title">
+                            			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ field.auto_id }}">{{ field.label }}</label>
+                    				</h4>
+                    			</a>
+                    		</div>
+                    	</div>
+                    </div>
+                    <div id="coords" class="panel-collapse collapse">
+                    	<p><em>{% trans 'Attribute students to subject' %}:</em></p>
+                    	{% render_field field class='form-control' %}
+                    </div>
+                </div>
+			</div>
+	{% elif field.auto_id == 'id_professor' %}
+			<div class="panel-group" id="coordinators_accordion" role="tablist" aria-multiselectable="true">
+				<div class="panel panel-info">
+        			<div class="panel-heading">
+            			<div class="row">
+                			<div class="col-md-12">
+                    			<a data-parent="#coordinators_accordion" data-toggle="collapse" href="#coords">
+                    				<h4 class="panel-title">
+                            			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ field.auto_id }}">{{ field.label }}</label>
+                    				</h4>
+                    			</a>
+                    		</div>
+                    	</div>
+                    </div>
+                    <div id="coords" class="panel-collapse collapse">
+                    	<p><em>{% trans 'Attribute professors to subject' %}:</em></p>
+                    	{% render_field field class='form-control' %}
+                    </div>
+                </div>
+			</div>
+		{% else %}
+			<div class="form-group {% if form.has_error %} has-error {% endif %} is-fileinput">
+				{% if field.auto_id != 'id_visible' %}
+					<label for="{{ field.auto_id }}">{{ field.label }}</label>
+				{% endif %}
+				{% if field.auto_id == 'id_visible' %}
+					<div class="checkbox">
+						<label for="{{ field.auto_id }}">
+	      					{% render_field field %} {{field.label}}
+	  					</label>
+					</div>
+				{% elif field.auto_id == 'id_description' %}
+					{% render_field field class='form-control text_wysiwyg' %}
+				{% else %}
+					{% render_field field class='form-control' %}
+				{% endif %}
+				<span class="help-block">{{ field.help_text }}</span>
+				{% if field.errors %}
+					<div class="row">
+						</br>
+						<div class="alert alert-danger alert-dismissible" role="alert">
+		  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		  						<span aria-hidden="true">&times;</span>
+	  						</button>
+							<ul>
+								{% for error in field.errors %}
+									<li>{{ error }}</li>
+								{% endfor %}
+							</ul>
+						</div>
+					</div>
+				{% endif %}
+			</div>
+		{% endif %}
+		
+	{% endfor %}
+
+	</form>
+	</div>
+	</div>
 
 	<script type="text/javascript">
 		$('#id_professor').multiSelect({
