Adjusting coordinator presentation in subjects screen

--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -80,19 +80,14 @@
                         <input type="hidden" class="log_url" value="{% url 'categories:view_log' category.id %}" />
                         <input type="hidden" class="log_id" value="" />
                         {% if category.coordinators.all|length > 0  %}
-                             <h4>  {% trans "Coordinator(s): " %}
-                            {% for coordinator in category.coordinators.all %}
-                                {{coordinator.social_name}}
-                            {% endfor %}
-                        </h4>
+                            <h4><b>{% trans "Coordinator(s) " %}: </b>
+                                {{ category.coordinators.all|join:', ' }}
+                            </h4>
                         {% else %}
                             <h4> {% trans "It doesn't possess coordinators" %} </h4>
                         {% endif %}
-
                        
                         {{category.description|safe}}
-                        
-                        
                     
                         {% if user in category.coordinators.all %}
                         <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "create new subject" %} </button></a>
