Adding active style to settings menu

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -192,6 +192,10 @@
     background: #00695C !important;
 }
 
+.navbar-nav li.settings_menu_active {
+    background: #00695C    
+}
+
 .top-search {
     color: #F5F5F5;
 }
