--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -2,8 +2,14 @@
 
 {% block content %}
 
-	<div id="cloud-users" class="col-md-12">
-		
+	<div id="" class="col-md-12">
+		<div class="users-cloud">
+		<ul class=" users-cloud">
+			{% for user in users %}
+				<li>{{user.social_name}}</li>
+			{% endfor %}
+		</ul>
+		</div>
 	</div>
 	<div class="col-md-12 cards-content">
     	<div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
